#163 fix CSS spacing of status under chessboard now that the board is not absolute, add flex arrangement for resign Button

--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -248,9 +248,15 @@ main {
     pointer-events: none;
 }
 
-#chessStatus {
+#belowChessboard {
+    width: 440px;
     position: relative;
-    top: 500px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    display: flex;
+    text-align: right;
+    justify-content: space-between;
 }
 
 #createGameDiv {
